put code in cpp

--- a/library.properties
+++ b/library.properties
@@ -5,5 +5,7 @@ maintainer=neu-rah, ruihfazevedo@gmail.com
 sentence=AVR Pin change monitor
 paragraph=Attach user function and data to pin change events
 category=Uncategorized
+dot_a_linkage=true
 url=https://github.com/neu-rah/PCINT
 architectures=*
+includes=pcint.h
