API change to full support due

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=r-site PCINT
-version=3.0
+name=PCINT r-site.net
+version=4.0.0
 author=Rui Azevedo, ruihfazevedo@gmail.com
 maintainer=neu-rah, ruihfazevedo@gmail.com
-sentence=AVR Pin change monitor
-paragraph=Attach user function and data to pin change events
+sentence=Arduino Pin change monitor
+paragraph=Attach user function and data to pin change events.
 category=Uncategorized
 dot_a_linkage=true
 url=https://github.com/neu-rah/PCINT
