--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
 name=PCINT r-site.net
-version=4.0.3
+version=4.0.4
 author=Rui Azevedo, ruihfazevedo@gmail.com
 maintainer=neu-rah, ruihfazevedo@gmail.com
 sentence=Arduino Pin change monitor
 paragraph=Attach user function and data to pin change events.
-category=Uncategorized
+category=Signal Input
 dot_a_linkage=true
 url=https://github.com/neu-rah/PCINT
 architectures=*
