--- a/examples/btnled/platformio.ini
+++ b/examples/btnled/platformio.ini
@@ -1,18 +1,37 @@
 ; PlatformIO Project Configuration File
 ;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
+;   Build options: build flags, source filter, extra scripting
+;   Upload options: custom port, speed and extra flags
 ;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
 ;
 ; Please visit documentation for the other options and examples
-; http://docs.platformio.org/page/projectconf.html
+; http://docs.platformio.org/en/stable/projectconf.html
 
-[env:due]
-platform=atmelsam
-board=due
-framework=arduino
 
 [platformio]
 src_dir=btnled
-lib_dir=~/Arduino/Libraries
+
+[env:nanoatmega328]
+platform = atmelavr
+board = nanoatmega328
+framework = arduino
+upload_port=/dev/ttyUSB*
+upload_flags=-V
+build_flags = -DDEBUG
+
+; [env:uno]
+; platform = atmelavr
+; board = nanoatmega328
+; framework = arduino
+
+; [env:due]
+; platform = atmelsam
+; board = due
+; framework = arduino
+; build_flags = -Wno-comment -Wno-reorder -Wno-strict-aliasing -Wno-builtin-macro-redefined
+
+; [env:teensy31]
+; platform = teensy
+; board = teensy31
+; framework = arduino
+; build_flags = -Wno-comment -Wno-reorder -Wno-strict-aliasing -Wno-builtin-macro-redefined -Wno-switch
