remove do_a_linkage

--- a/library.properties
+++ b/library.properties
@@ -1,11 +1,11 @@
 name=PCINT r-site.net
-version=4.0.7
+version=4.0.8
 author=Rui Azevedo, ruihfazevedo@gmail.com
 maintainer=neu-rah, ruihfazevedo@gmail.com
 sentence=Arduino Pin change monitor
 paragraph=Attach user function and data to pin change events.
 category=Signal Input/Output
-dot_a_linkage=true
+dot_a_linkage=false
 url=https://github.com/neu-rah/PCINT
 architectures=*
 includes=pcint.h
